# clicknote-ocr-microservice

./: README.md  client.py  pyproject.toml
scripts/: realLabels.txt  run_api.py  run_model_api.py
src/python_ocr/api/: app.py
src/python_ocr/api/routers/: prediction.py
src/python_ocr/core/: config.py  email.py  security.py
src/python_ocr/db/: client.py
src/python_ocr/db/repositories/: api_clients.py
src/python_ocr/ftp/: server.py
src/python_ocr/models/: inference.py  preprocessing.py  run_model.py  run_model_test.py  test_model.py
src/python_ocr/models/trocr/: model.py
src/python_ocr/schemas/: api.py
